--- a/demo/package.json
+++ b/demo/package.json
@@ -25,6 +25,7 @@
     "express": "^4.17.1",
     "express-handlebars": "^6.0.2",
     "formidable": "^2.0.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.2",
     "mysql2": "^2.3.3",
     "nodemailer": "^6.7.2",
