--- a/demo/package.json
+++ b/demo/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon --inspect src/index.js",
-    "start:dev": "nodemon --"
+    "start:prod": "env-cmd -f .env.production",
+    "start:dev": "env-cmd -f .env.development"
   },
   "repository": {
     "type": "git",
@@ -23,6 +24,8 @@
   },
   "homepage": "https://github.com/phamdaiminhquan/NodejsTraining#readme",
   "dependencies": {
+    "dotenv": "^10.0.0",
+    "env-cmd": "^10.1.0",
     "express": "^4.17.1",
     "express-handlebars": "^6.0.2",
     "formidable": "^2.0.1",
